Updated MainActivity to have another look

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -29,6 +29,14 @@
             <com.transferwise.sequencelayout.SequenceStep
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:active="true"
+                />
+
+            <com.transferwise.sequencelayout.SequenceStep
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:subtitle="This is the subtitle of this step"
+                app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
                 app:title="Second step"/>
 
             <com.transferwise.sequencelayout.SequenceStep
@@ -36,7 +44,6 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="8dp"
                 android:paddingTop="4dp"
-                app:active="true"
                 app:anchor="Today"
                 app:subtitle="This is the subtitle of this step.\nIt should describe steps (especially the active step) in a detailed way."
                 app:title="Third step"
